@@ -18,6 +18,10 @@
 }
 
 
+.advise-type-view-sem-title {
+  font-weight: bold;
+}
+
 /**
  *   The track selection popup....
  */
